# prcpp

./: .gitignore  CMakeLists.txt  README.md
arbeitsblaetter/: CMakeLists.txt
arbeitsblaetter/input_output/: CMakeLists.txt
arbeitsblaetter/input_output/src/: main.cpp  pgm.cpp  pgm.h
arbeitsblaetter/linked_list/: CMakeLists.txt
arbeitsblaetter/linked_list/src/: d_linked_list.cpp  d_linked_list.h  item.h
arbeitsblaetter/linked_list/unittest/: d_linked_list_test.cpp
arbeitsblaetter/smart_pointer/: CMakeLists.txt
arbeitsblaetter/smart_pointer/src/: main.cpp
arbeitsblaetter/smart_pointer/src/A1/: bicycle.cpp  bicycle.h  user.cpp  user.h
arbeitsblaetter/smart_pointer/src/A2/: control_block.cpp  control_block.h  item.cpp  item.h  smart_pointer.cpp  smart_pointer.h
arbeitsblaetter/smart_pointer/unittest/: bicycle_user_test.cpp  smart_pointer_test.cpp
arbeitsblaetter/vererbung/: CMakeLists.txt
arbeitsblaetter/vererbung/src/: bar_interface.h  bar_tester.cpp  bar_tester.h  main.cpp  suv.cpp  suv.h  vehicle.cpp  vehicle.h
arbeitsblaetter/vererbung/src/A3/: dummy_socket.cpp  dummy_socket.h  loopback_socket.cpp  loopback_socket.h  socket_interface.h
arbeitsblaetter/vererbung/src/A4/: base_implementation.h  base_interface.h  extended_implementation.h  extended_interface.h
arbeitsblaetter/vererbung/unittest/: a4_test.cpp  socket_test.cpp
build_system/: CMakeLists.txt
build_system/src/: main.cpp  module.cpp  module.h  student.cpp  student.h
build_system/unittest/: student_test.cpp
cmake/: cpplint.cmake  cpplint.py  prcpp_code.cmake
example/: CMakeLists.txt
example/src/: function.cpp  function.h  main.cpp
example/unittest/: example_test.cpp
playground/: CMakeLists.txt
playground/src/: main.cpp
playground/unittest/: playground_test.cpp
pointer_und_referenzen/: CMakeLists.txt
pointer_und_referenzen/src/: main.cpp  string_inverter.cpp  string_inverter.h
preprocessor/: CMakeLists.txt
preprocessor/src/: main.cpp
uebungen/: CMakeLists.txt
uebungen/expression/: CMakeLists.txt
uebungen/expression/src/: element_operations.h  expression.h  expression_operations.h  main.cpp  vector_operations.h
uebungen/expression/unittest/: element_operations_test.cpp  expression_test.cpp  mikes_test.cpp
uebungen/klassen/: CMakeLists.txt
uebungen/klassen/src/: main.cpp  mutex.h  mutex_guard.cpp  mutex_guard.h  point.h  point_array.cpp  point_array.h
uebungen/klassen/unittest/: mutex_guard_test.cpp  point_array_test.cpp
uebungen/matrix/: CMakeLists.txt
uebungen/matrix/src/: main.cpp  matrix.cpp  matrix.h
uebungen/matrix/src/utils/: chrono_io.h  math.h  stopwatch.h
uebungen/matrix/unittest/: matrix_test.cpp  mikes_test.cpp
uebungen/set/: CMakeLists.txt
uebungen/set/src/: main.cpp  ordered_set.cpp  ordered_set.h  set.cpp  set.h
uebungen/set/unittest/: ordered_set_test.cpp  set_test.cpp  tmp_test.cpp
